# pattern_kit

./: .bumpversion.cfg  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architectural.rst  behavioral.rst  conf.py  creational.rst  index.rst  structural.rst  utils.rst
docs/architectural/: service_locator.rst
docs/behavioral/: event.rst  event_emitter.rst  handler_pipeline.rst  observer.rst  strategy.rst
docs/creational/: factory.rst  object_pool.rst  singleton.rst
docs/structural/: delegate_mixin.rst
docs/utils/: config_loader.rst
pattern_kit/: __init__.py
pattern_kit/architectural/: service_locator.py
pattern_kit/behavioral/: event.py  event_emitter.py  handler_pipeline.py  observer.py
pattern_kit/creational/: factory.py  object_pool.py  singleton.py
pattern_kit/structural/: delegate_mixin.py
pattern_kit/utils/: config_loader.py
tests/architectural/: test_service_locator.py
tests/behavioral/: test_event.py  test_event_emitter.py  test_handler_pipeline.py  test_observer.py
tests/creational/: test_factory.py  test_object_pool.py  test_singleton.py
tests/structural/: test_delegate_mixin.py
tests/utils/: test_config_loader.py
